<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name" translatable="false">PayProApp</string>

  <string name="phone_code" translatable="false">+%s</string>
  <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
  <string name="search_hint">Search&#8230;</string>
  <string name="no_result_found">No result found</string>
  <string name="select_country">Select county</string>
  <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
  <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
  <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>

  <string name="continue_button">Continue</string>

  <string name="slide_1_title">PayPro app</string>
  <string name="slide_1_desc">PayPro App is a free, safe and easy-to-use Bitcoin Wallet for spending and saving your preferred crypto-currency.</string>

  <string name="slide_2_title">Instant payments</string>
  <string name="slide_2_desc">Send instant payments to anyone in your Contact List just by using their phone number.\nIt’s easy, free and fast.</string>

  <string name="ray">ray</string>
  <string name="screen_shot">screen_shot</string>

  <string name="action_search">action_search</string>

  <string name="phone_number_activity_info">TYPE YOUR PHONE NUMBER</string>
  <string name="title_activity_phone_number">Phone number</string>
  <string name="confirmation_code_actionbar">Next</string>
  <string name="next">Next</string>


  <string name="title_activity_sms_code">SMS Code</string>
  <string name="enter_sms_code">Enter the SMS code</string>
  <string name="enter_sms_code_desc">Enter the SMS code you have received to register in the PayPro app</string>


  <string name="title_passcode_create">Passcode</string>
  <string name="enter_passcode_create">Create a passcode</string>
  <string name="enter_passcode_desc_create">A passcode protects your data and is used to unlock the PayPro app</string>

  <string name="title_passcode_login">Log in</string>
  <string name="enter_passcode_login">Enter your Passcode in PayPro</string>
  <string name="enter_passcode_desc_login">Enter your passcode to unlock the PayPro app</string>

  <string name="title_passcode_old">Old Passcode</string>
  <string name="enter_passcode_old">Old passcode in PayPro</string>
  <string name="enter_passcode_desc_old">Enter your passcode to change for one new</string>

  <string name="title_passcode_new">New Passcode</string>
  <string name="enter_passcode_new">New passcode in PayPro</string>
  <string name="enter_passcode_desc_new">A passcode protects your data and is used to unlock the PayPro app</string>

  <string name="title_passcode_confirm">Confirm Passcode</string>
  <string name="enter_passcode_confirm">Confirm your passcode</string>
  <string name="enter_passcode_desc_confirm">A passcode protects your data and is used to unlock the PayPro app</string>


  <string name="title_support">Support</string>
  <string name="title_scan">ScanQR</string>
  <string name="title_send">Send Money</string>
  <string name="title_account">Account</string>
  <string name="title_settings">Settings</string>

  <string name="info_tab_title">Info</string>
  <string name="transactions_tab_title">Transactions</string>

  <string name="bits">Bits</string>
  <string name="balance_empty">-.--</string>

  <string name="bitcoin_account_header">BITCOIN ACCOUNT</string>

  <string name="qrcode_label">QR Code: </string>
  <string name="address_label">Address: </string>


  <string name="latest_transactions_header">LATEST TRANSACTIONS</string>
  <string name="passcode">Passcode</string>
  <string name="tell_a_friend">Tell a friend</string>
  <string name="info">Info</string>
  <string name="todo">TODO</string>
  <string name="done">Done</string>
  <string name="nickname">Nickname</string>
  <string name="edit">Edit</string>

  <string name="micro">μ</string>

  <string name="contacts_permission_denied_text">To send money to your friends, allow PayPro to acces your contacts.</string>
  <string name="empty_contacts_list">Your contacts list is empty</string>

  <string name="low_storage_error">The phone storage is low</string>
  <string name="camera_permission_denied_text">To scan a qr code, allow PayPro to access the camera.</string>
  
  <string name="no_internet">No Internet</string>

  <string name="bits_lowercase">bits</string>

  <string name="amount_placeholder">"000.00</string>
  <string name="private_msg_placeholder">Message for beneficiary</string>

  <string name="bitcoin_address">Addr:</string>
  <string name="hint_bitcoin_address">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</string>

  <string name="ready_to_send">READY TO SEND</string>
  <string name="to">TO</string>

  <string name="cell_description">Cell description which explains the consequences of the above action.</string>

  <string name="swipe_to_send">Swipe to send</string>

  <string name="you_rock">You rock!</string>

  <string name="destinatary_not_available">Destinatary name not available</string>


  <string name="choose_contact">Choose contact</string>

  <string name="amount_title">Amount</string>
  <string name="send_title">Send</string>
  <string name="bitcoin_address_title">Bitcoin Address</string>
  <string name="account_title">Account</string>
  <string name="contacts_title">Contacts</string>

  <string name="sms_msg">Hi! I am trying to send you money via PayPro but I see you don\'t have an account. Can you download it so you can instantly have the money? It\'s available for iOS and Android :)</string>

  <string name="default_transaction_msg">Sent from PayPro App - download on the AppStore</string>

  <string name="invite_dialog">This is not a PayPro user. Do you want to send an invite?</string>
  <string name="invite_dialog_title">Invite</string>

  <!--Errors-->
  <string name="error_connection">No internet connection!</string>
  <string name="error_save">Saving error!</string>
  <string name="error_username_exist">Phone number already registered</string>
  <string name="error_invalid_verification_code">Invalid verification code</string>
  <string name="error_passcode_dont_match">Passcodes don\'t match</string>
  <string name="error_invalid_phonenumber">Invalid phone number</string>
  <string name="error_insufficient_funds">Insufficient funds</string>
  <string name="error_basic">Ups! Sorry, something went wrong</string>
  
  <string name="try_again">Try Again</string>
  
  <string name="community">Community</string>
  <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>


  <string name="no_results">No results for \"%1$s\"</string>
</resources>
