<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_support"
        android:icon="@mipmap/tab_support"
        android:title="@string/title_support" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@mipmap/tab_scan"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_send"
        android:icon="@mipmap/tab_send"
        android:title="@string/title_send" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@mipmap/tab_account"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@mipmap/tab_settings"
        android:title="@string/title_settings" />

</menu>
