<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/toolbar">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/toolbar_next_layout"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:clickable="true"
                android:padding="15dp"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/next_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmation_code_actionbar"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currency_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="@android:color/black"
                android:labelFor="@id/amount_input"
                android:text="@string/bits_lowercase"/>

            <EditText
                android:id="@+id/amount_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:background="@android:color/transparent"
                android:hint="@string/amount_placeholder"
                android:inputType="numberDecimal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/private_msg_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:background="@android:color/transparent"
                android:textSize="15dp"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/private_msg_placeholder" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>