<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_ico_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/PayPro_Blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButtonToolbar"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@color/defaultBackgroundColor"
        android:contentDescription="@string/todo"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:tint="@color/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:layout_editor_absoluteX="0dp" />

    <RelativeLayout
        android:id="@+id/avatarLayout"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatarProfileView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/default_profile"
            tools:layout_editor_absoluteY="72dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/avatarProfileView"
            android:layout_centerHorizontal="true"
            android:background="@color/defaultBackgroundColor"
            android:contentDescription="@string/todo"
            android:text="@string/edit"
            android:textColor="@color/PayPro_Blue" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatarLayout">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/PayPro_Background">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/PayPro_Line"
                android:minHeight="0.5dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/PayPro_Background">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:height="30dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/nickname" android:paddingStart="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/PayPro_Line"
                android:minHeight="0.5dp" />

            <TableRow
                android:id="@+id/rowNickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dot_dark_slider">

                <TextView
                    android:id="@+id/nicknameProfileView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:height="44dp"
                    android:contentDescription="@string/nickname"
                    android:gravity="center_vertical"
                    android:text="@string/nickname"
                    android:textColor="@android:color/black" android:layout_marginStart="15dp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/nicknameArrow"
                        android:layout_width="8dp"
                        android:layout_height="13dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:contentDescription="@string/todo"
                        android:src="@mipmap/arrow_right" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/PayPro_Line"
                android:minHeight="0.5dp" />

        </TableLayout>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>